# leads_filo

./: README.md  pyproject.toml
src/leads_filo/: crew.py  main.py
src/leads_filo/config/: agents.yaml  tasks.yaml
src/leads_filo/tools/: capturar_leads.py  instagram_api.py  reativar_clientes.py
